{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 26,
  "lineage": "ff315a58-10c6-7e16-3e15-9390140f3740",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0949100acbba65b",
            "arn": "arn:aws:ec2:eu-north-1:531080694855:elastic-ip/eipalloc-0d0949100acbba65b",
            "association_id": "eipassoc-0f9ab0009ee99f26d",
            "domain": "vpc",
            "id": "eipalloc-0d0949100acbba65b",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ed43e2add6a9646f",
            "private_dns": "ip-10-0-1-27.eu-north-1.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-13-63-152-187.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.152.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:internet-gateway/igw-06998993216bb4d63",
            "id": "igw-06998993216bb4d63",
            "owner_id": "531080694855",
            "tags": {
              "Name": "cloudcart-igw"
            },
            "tags_all": {
              "Name": "cloudcart-igw"
            },
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0949100acbba65b",
            "association_id": "eipassoc-0f9ab0009ee99f26d",
            "connectivity_type": "public",
            "id": "nat-0b27348263baf6925",
            "network_interface_id": "eni-0ed43e2add6a9646f",
            "private_ip": "10.0.1.27",
            "public_ip": "13.63.152.187",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aeca80f3e5612842",
            "tags": {
              "Name": "cloudcart-nat"
            },
            "tags_all": {
              "Name": "cloudcart-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:route-table/rtb-031a851cd600ff2f9",
            "id": "rtb-031a851cd600ff2f9",
            "owner_id": "531080694855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b27348263baf6925",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudcart-private-rt"
            },
            "tags_all": {
              "Name": "cloudcart-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:route-table/rtb-0e439479460edc461",
            "id": "rtb-0e439479460edc461",
            "owner_id": "531080694855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06998993216bb4d63",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudcart-public-rt"
            },
            "tags_all": {
              "Name": "cloudcart-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00261e588580fcad0",
            "route_table_id": "rtb-031a851cd600ff2f9",
            "subnet_id": "subnet-0eebac9cabd6e97a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1357c3cbd9282dd",
            "route_table_id": "rtb-031a851cd600ff2f9",
            "subnet_id": "subnet-0d2106b345b41b682"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcaa7de5091b3321",
            "route_table_id": "rtb-0e439479460edc461",
            "subnet_id": "subnet-0aeca80f3e5612842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0441339122c00690d",
            "route_table_id": "rtb-0e439479460edc461",
            "subnet_id": "subnet-0d8e80fd816d21c98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:subnet/subnet-0eebac9cabd6e97a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eebac9cabd6e97a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531080694855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudcart-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cloudcart-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:subnet/subnet-0d2106b345b41b682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2106b345b41b682",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531080694855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudcart-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cloudcart-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:subnet/subnet-0aeca80f3e5612842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeca80f3e5612842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "531080694855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudcart-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cloudcart-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:subnet/subnet-0d8e80fd816d21c98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e80fd816d21c98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "531080694855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudcart-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cloudcart-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09a9430b8f0d1f1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudcart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudcart_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:531080694855:vpc/vpc-09a9430b8f0d1f1e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf7006ae28295406",
            "default_route_table_id": "rtb-02f9d28490c02d65a",
            "default_security_group_id": "sg-0bf22fe8e40afd2c2",
            "dhcp_options_id": "dopt-0b556dfeba23c79b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a9430b8f0d1f1e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f9d28490c02d65a",
            "owner_id": "531080694855",
            "tags": {
              "Name": "cloudcart-vpc"
            },
            "tags_all": {
              "Name": "cloudcart-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}